--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,6 +29,7 @@
     "path": "^0.12.7",
     "proxy": "^1.0.2",
     "quasar": "^2.7.7",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "yarn": "^1.22.19"
   }
 }
