--- a/Backend/package.json
+++ b/Backend/package.json
@@ -30,6 +30,7 @@
     "proxy": "^1.0.2",
     "quasar": "^2.7.7",
     "session": "^0.1.0",
+    "session-file-store": "^1.5.0",
     "yarn": "^1.22.19"
   }
 }
