--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -31,5 +30,6 @@
     "quasar": "^2.7.7",
     "session": "^0.1.0",
     "yarn": "^1.22.19"
-  }
+  },
+  "description": ""
 }
