--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "pinia": "^2.0.11",
     "proxy": "^1.0.2",
     "quasar": "^2.6.0",
+    "vee-validate": "^4.6.7",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
   },
