--- a/client/firebase.json
+++ b/client/firebase.json
@@ -3,11 +3,18 @@
     "rules": "database.rules.json"
   },
   "hosting": {
-    "public": "dist/spa",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ]
-  }
+  },
+  "public": "dist/spa",
+  "ignore": [
+    "firebase.json",
+    "**/.*",
+    "**/node_modules/**"
+  ],
+  "remoteconfig": {}
 }
