--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1209.0",
     "axios": "^0.21.4",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
@@ -23,6 +24,8 @@
     "firebase": "^9.9.1",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mybatis-mapper": "^0.6.8",
     "nodemon": "^2.0.19",
     "oracledb": "^5.4.0",
