--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "aws-sdk": "^2.1209.0",
     "axios": "^0.21.4",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
@@ -17,6 +18,8 @@
     "express": "^4.18.1",
     "firebase": "^9.9.1",
     "http": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mybatis-mapper": "^0.6.8",
     "nodemon": "^2.0.19",
     "oracledb": "^5.4.0",
