--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "firebase": "^9.9.1",
     "http": "^0.0.1-security",
