--- a/Backend/package.json
+++ b/Backend/package.json
@@ -34,6 +34,7 @@
     "quasar": "^2.7.7",
     "session": "^0.1.0",
     "session-file-store": "^1.5.0",
+    "uuid": "^9.0.0",
     "yarn": "^1.22.19"
   }
 }
