--- a/Backend/package.json
+++ b/Backend/package.json
@@ -35,6 +35,7 @@
     "session": "^0.1.0",
     "session-file-store": "^1.5.0",
     "uuid": "^9.0.0",
+    "uuid4": "^2.0.3",
     "yarn": "^1.22.19"
   }
 }
