--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "uuid": "^9.0.0",
     "vee-validate": "^4.6.7",
     "vue": "^3.0.0",
+    "vue-cookies": "^1.8.1",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
