Day 123 깃발 찍기, 배포 테스트
남은 일 : 반경 , 깃발 별개로 이벤트 줄 수 있게 관리

--- a/client/.firebaserc
+++ b/client/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "projectjeju-479a0"
-  }
+    "default": "quasarinjeju",
+    "quasarinjeju": "quasarinjeju"
+  },
+  "targets": {},
+  "etags": {}
 }
