--- a/client/firebase.json
+++ b/client/firebase.json
@@ -16,5 +16,17 @@
     "**/.*",
     "**/node_modules/**"
   ],
-  "remoteconfig": {}
+  "remoteconfig": {},
+  "functions": {
+    "source": "functions",
+    "ignore": [
+      "node_modules",
+      ".git",
+      "firebase-debug.log",
+      "firebase-debug.*.log"
+    ],
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint"
+    ]
+  }
 }
