--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "firebase": "^9.9.1",
     "http": "^0.0.1-security",
+    "jQuery": "^1.7.4",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "mybatis-mapper": "^0.6.8",
@@ -32,6 +33,7 @@
     "vee-validate": "^4.6.7",
     "vue": "^3.0.0",
     "vue-cookies": "^1.8.1",
+    "vue-head": "^2.2.0",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
@@ -39,7 +41,8 @@
     "@quasar/app-vite": "^1.0.0",
     "autoprefixer": "^10.4.2",
     "pug": "^3.0.2",
-    "pug-plain-loader": "^1.1.0"
+    "pug-plain-loader": "^1.1.0",
+    "vue-iamport": "^0.1.2"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
