--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.3",
     "firebase": "^9.9.1",
     "http": "^0.0.1-security",
+    "iamport": "^0.3.4",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
