--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.4",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
     "concurrently": "^7.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
