--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./mapper/hotelMapper.js",
     "dev": "concurrently \"node ./mapper/hotelMapper.js\" \"cd ../client && yarn quasar dev\""
   },
   "author": "",
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.1209.0",
     "axios": "^0.21.4",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "concurrently": "^7.4.0",
@@ -26,6 +27,7 @@
     "http": "^0.0.1-security",
     "iamport": "^0.3.4",
     "jsonwebtoken": "^8.5.1",
+    "libaio": "^1.0.3",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
     "mybatis-mapper": "^0.6.8",
@@ -36,8 +38,11 @@
     "quasar": "^2.7.7",
     "session": "^0.1.0",
     "session-file-store": "^1.5.0",
+    "unzip": "^0.1.11",
     "uuid": "^9.0.0",
     "uuid4": "^2.0.3",
+    "wget": "^0.0.1",
     "yarn": "^1.22.19"
-  }
+  },
+  "description": ""
 }
