--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,8 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "firebase": "^9.9.1",
+    "firebase-admin": "^11.0.1",
+    "firebase-functions": "^3.23.0",
     "http": "^0.0.1-security",
     "iamport": "^0.3.4",
     "jsonwebtoken": "^8.5.1",
